<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.breiter.movietowatchapp.ui.screen.saved.SavedViewModel" />
    </data>

    <androidx.appcompat.widget.Toolbar
        style="@style/ToolbarStyle">


        <ImageButton
            android:id="@+id/saved_movies"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/dim_2"
            android:background="?attr/actionBarItemBackground"
            android:contentDescription="@string/heart_icon"
            android:src="@drawable/ic_favorite"
            style="@style/ToolbarIconStyle" />

        <TextView
            android:id="@+id/title_text"
            android:text="@string/saved_movies"
            style="@style/ToolbarTitleTextStyle" />

        <ImageButton
            android:id="@+id/search_button"
            style="@style/ToolbarIconStyle"
            android:background="?attr/actionBarItemBackground"
            android:onClick="@{()-> viewModel.onSearchClick()}"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/dim_2"
            android:contentDescription="@string/search_icon"
            android:src="@drawable/ic_search" />


    </androidx.appcompat.widget.Toolbar>
</layout>
