<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.breiter.movietowatchapp.ui.screen.detail.DetailViewModel" />
    </data>

    <androidx.appcompat.widget.Toolbar style="@style/ToolbarStyle">

        <ImageButton
            android:id="@+id/saved_movies"
            style="@style/ToolbarIconStyle"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/dim_2"
            android:background="?attr/actionBarItemBackground"
            android:contentDescription="@string/heart_icon"
            android:onClick="@{()->viewModel.onSavedClicked()}"
            android:src="@drawable/ic_favorite" />

        <TextView
            android:id="@+id/title_text"
            style="@style/ToolbarTitleTextStyle"
            android:text="@string/movie_detail" />

        <ImageButton
            android:id="@+id/action_nav_search"
            style="@style/ToolbarIconStyle"
            android:layout_gravity="end"
            android:background="?attr/actionBarItemBackground"
            android:layout_marginEnd="@dimen/dim_2"
            android:contentDescription="@string/search_icon"
            android:onClick="@{()-> viewModel.onSearchClick()}"
            android:src="@drawable/ic_search" />

    </androidx.appcompat.widget.Toolbar>
</layout>
