<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.breiter.movietowatchapp.ui.screen.detail.DetailViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/surface"
        tools:context=".ui.screen.detail.DetailFragment">

        <TextView
            android:id="@+id/movie_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:text="@{viewModel.selectedMovie.title}"
            tools:text="Joker" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/movie_title_text"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:id="@+id/movie_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundTint="#D1A3A3">

                <ImageView
                    android:id="@+id/poster_image"
                    style="@style/DetailPosterStyle"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="8dp"
                    android:scaleType="centerCrop"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/movie_poster"
                    app:imageUrl="@{viewModel.selectedMovie.posterUrl}"
                    tools:src="@drawable/ic_logo" />

                <TextView
                    android:id="@+id/overview_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/poster_image"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:padding="8dp"
                    android:text="@{viewModel.selectedMovie.overview}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="@string/tools_overview" />

                <View
                    android:id="@+id/divider1"
                    style="@style/DividerStyle"
                    android:layout_below="@id/overview_text" />

                <LinearLayout
                    android:id="@+id/rating_linear_layout"
                    style="@style/LinLayoutStyle"
                    android:padding="4dp"
                    android:layout_below="@id/divider1">

                    <TextView
                        style="@style/SimpleTextViewStyle"
                        android:text="@string/rating" />

                    <TextView
                        android:id="@+id/rating_text"
                        style="@style/DetailTextViewStyle"
                        android:text="@{String.valueOf(viewModel.selectedMovie.rating)}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        tools:text="8.2" />

                    <TextView
                        android:id="@+id/perTen"
                        style="@style/DetailTextViewStyle"
                        android:text="@string/per_ten"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/genre_linear_layout"
                    style="@style/LinLayoutStyle"
                    android:padding="4dp"
                    android:layout_below="@+id/rating_linear_layout">

                    <TextView
                        style="@style/SimpleTextViewStyle"
                        android:text="@string/genre" />

                    <TextView
                        android:id="@+id/genre_text"
                        style="@style/DetailTextViewStyle"
                        app:genreFormatted="@{viewModel.genreAsString}"
                        tools:text="Drama" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/year_linear_layout"
                    style="@style/LinLayoutStyle"
                    android:padding="4dp"
                    android:layout_below="@id/genre_linear_layout">

                    <TextView
                        style="@style/SimpleTextViewStyle"
                        android:text="@string/released" />

                    <TextView
                        android:id="@+id/releasedTextView"
                        style="@style/DetailTextViewStyle"
                        android:layout_height="match_parent"
                        app:dateFormatter="@{viewModel.selectedMovie.releaseDate}"
                        tools:text="2019" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/language_linear_layout"
                    style="@style/LinLayoutStyle"
                    android:padding="4dp"
                    android:layout_below="@+id/year_linear_layout">

                    <TextView
                        style="@style/SimpleTextViewStyle"
                        android:text="@string/language" />

                    <TextView
                        android:id="@+id/language_text"
                        style="@style/DetailTextViewStyle"
                        android:text="@{viewModel.selectedMovie.language}"
                        tools:text="english" />
                </LinearLayout>

                <View
                    android:id="@+id/divider2"
                    style="@style/DividerStyle"
                    android:layout_below="@id/language_linear_layout" />

                <ImageButton
                    android:id="@+id/save_delete_movies"
                    style="@style/DetailFavouriteIconStyle"
                    android:padding="4dp"
                    android:background="?attr/actionBarItemBackground"
                    android:layout_below="@+id/divider2"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/heart_icon"
                    android:onClick="@{()-> viewModel.onAddRemoveClick()}"
                    app:src="@{viewModel.isSaved}"
                    tools:src="@drawable/ic_favorite" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_detail_layout"
            bind:viewModel="@{viewModel}" />

    </RelativeLayout>
</layout>