<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="movie"
            type="com.breiter.movietowatchapp.data.domain.Movie" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/poster_image"
                app:imageUrl="@{movie.posterUrl}"
                tools:src="@drawable/ic_logo"
                android:contentDescription="@string/movie_poster"
                style="@style/OverviewPosterStyle" />

            <RelativeLayout
                android:id="@+id/overview_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/poster_image">

                <TextView
                    android:id="@+id/title_text"
                    style="@style/OverviewStyle"
                    android:text="@{movie.title}"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/dim_1_25"
                    android:textStyle="bold"
                    tools:text="Joker" />

                <TextView
                    android:id="@+id/parenthesis_left"
                    style="@style/OverviewStyle"
                    android:layout_below="@id/title_text"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/dim_1_25"
                    android:text="@string/parenthesis_open"
                    tools:text="(" />

                <TextView
                    android:id="@+id/year_text"
                    style="@style/OverviewStyle"
                    app:dateFormatter="@{movie.releaseDate}"
                    android:layout_below="@id/title_text"
                    android:layout_toEndOf="@id/parenthesis_left"
                    tools:text="2019" />

                <TextView
                    android:id="@+id/parenthesis_right"
                    style="@style/OverviewStyle"
                    android:layout_below="@id/title_text"
                    android:layout_toEndOf="@id/year_text"
                    android:text="@string/parenthesis_close"
                    tools:text=")" />

                <ImageView
                    android:id="@+id/rating_image"
                    android:src="@drawable/ic_rating"
                    android:contentDescription="@string/star_description"
                    style="@style/RatingIconStyle" />

                <TextView
                    android:id="@+id/rating_text"
                    style="@style/OverviewStyle"
                    android:text="@{String.valueOf(movie.rating)}"
                    android:layout_below="@id/year_text"
                    android:layout_marginStart="@dimen/dim_0_25"
                    android:layout_toEndOf="@id/rating_image"
                    tools:text="8.2" />
            </RelativeLayout>

            <View
                android:id="@+id/divider"
                android:layout_below="@id/poster_image"
                style="@style/DividerStyle" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</layout>